main.css
/* ... */
/*phone styles*/
@media(max-width: 600px){

h1 {
    font-size: 5.5rem;
    margin-bottom:10%;
    margin-top: 10%;
    margin-left: 2%;
}

h2 {
    font-size: 1.6rem;
    margin-left: 1%;
    margin-top: 5%;
    margin-bottom: 25%;
}

svg:nth-of-type(1){
    height: 2rem;
    width:4rem;
    right: 2rem;
    top: 4rem;
}


.open {
    left: 1rem;
    height: 98%;
}

.headings-container {
    align-items: flex-start;
    width: unset;
    margin:0;
    height: 100%;
    padding-left:7%;
    padding-top: 30%;
}

.btn-container {
    padding-right:6%;
    margin-left: -5%;
    width: 100%;
}

.btn-container .btn {
    width: 100%;
    height: 3.5rem;
    
    

}

.btn-container .btn p {
    font-size: 1.2rem;
    margin-top:3%;
    line-height: 1.9;
}

.headshot {
height: 13rem;
width: 13rem;
top:-10.5rem;
right: -2.5rem;
}

#about {
    padding-top: 7%;
    padding-left: 7%;
    height: 45rem;
    margin-top: 20%;
}


.contact-info-container{
    flex-direction: column;
    align-items: center;
}

.contact-info-container a{
   width: 100%;
   
}

.contact-info-container a p {
    margin-bottom: 10rem;
    line-height: 1;
}

.icon-container {
    display: flex;
    justify-content: space-between;
    margin-top: 0%;
    padding: 10%;
    width: 100%;
    height: 20%;
}

.icon-container i {
    margin-left: 25%;
}

.skill-tools-container {
    display: flex;
    flex-direction: column;
}

h3:nth-of-type(3){
    display: none;
}

h3:nth-of-type(4) {
    margin-top: 70rem;
}

h3:nth-of-type(2){
    margin-bottom: 25%;
}

h3:nth-of-type(4){
    margin-bottom: 15rem;
    margin-top: 55rem;
}

.ficon {
    margin-bottom: 40%;
}

.tools .ficon {
    margin-top: 20%;
}


.skills::after {
    width: 80%;
    height: 38rem;
    top: -5rem;
}

.skills {
    margin-top:35rem;
    margin-left: 10%;
    margin-bottom: 15%;
    width: 80%;
}

.skills-card {
    width: 30%;
    padding-bottom: 30%;
}

.skills-card i {
    margin-bottom: 55%;
}



.tools::after {
    top: 60rem;
    left:5rem;
    height: 40rem;
    width: 80%;
    
  }

.tools {
    width: 80%;
    margin-top: 45%;
    margin-left: 2rem;
}

.tools::before {
    top: 45rem;
    border-bottom: 5px solid var(--border-color);
    color: var(--h3-color);
    font-weight:bold;
    position: absolute;
    content: 'Tools';
    font-size: 3.6rem;
    

}

.tools-card {
    width: 45%;
    padding: 0;
}

.tools-card p {
    margin: 0;
  }

  .tools-card i {
    margin: 10%;
  }

  .projects {
      margin-top: -25%;
  }

  h3:nth-of-type(5){
      margin-top: 5rem;
      margin-bottom: 5rem;
  }

  footer .icon-container {
    font-size: .2rem;
    margin: 0;
    width: 50%;
    padding: 0;
}

footer .icon-container .fab {
    height: 100%;
    margin: 0%;
    padding: .2rem;
}

footer nav {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    padding-top: 4rem;
}

footer nav a {
    font-size: 1rem;

}

footer p {
    margin-left: 10%;
}


}

